--- a/Web TechPro/index.html
+++ b/Web TechPro/index.html
@@ -80,7 +80,7 @@
                 <h3>TechPRO X</h3>
                 <p class="precio">$299</p>
             </div>
-            
+
             <div class="modelo modelo-y">
                 <h3>TechPRO Y</h3>
                 <p class="precio">$399</p>
@@ -92,7 +92,33 @@
             </div>
         </div>
     </main>
+    <section class="newsletter">
+        <div class="contenido-newsletter contenedor">
+            <div class="texto-newsletter">
+                <h2>Recibe Actualizaciones</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore recusandae commodi aperiam amet
+                    vitae ut alias maiores eveniet velit incidunt at maxime, corrupti tempore. Provident velit error
+                    quia deserunt doloremque.</p>
 
+                <form class="formulario">
+                    <div class="input">
+                        <input type="text" placeholder="Tu E-mail">
+                    </div>
+                    <input type="submit" value="Inscribirme">
+                </form>
+
+            </div>
+        </div>
+
+    </section>
+
+    <footer class="footer ">
+        <p>Todos los derechos reservados. 2024</p>
+
+    </footer>
+
+    <script src="js/imagenes.js"></script>
+    
 </body>
 
 </html>
